# Zoom

./: .gitignore  CMakeLists.txt  Zoom.sln  Zoom.vcxproj  Zoom.vcxproj.filters
include/: InputHeaders.h
maps/: SymbolMap.json
resources/: modinfo.json
resources/assets/: manifest.json
resources/assets/texts/: en_US.lang
source/: SymbolMap.json  VFuncFiller.h  Zoom.cpp  init.asm  main.cpp
tools/: add_security.py  init.asm  main.cpp  process_headers.py  process_headers_simplified.py
